Revision history for Perl extension Crypt::NaCl::Sodium.

{{$NEXT}}

0.04   2015-05-18 00:31:37
    BSDs do not come with mempcpy
    Fix some compiler warnings

0.03   2015-05-12 22:26:26
    Add Alien::Sodium to configure requirements
    Correct label for crypto_scalarmult->base

0.02   2015-05-12 01:33:29
    Add provides for indexing .pod files
    Minor documentaton fixes

0.01   2015-05-12 00:43:48
	Initial version.
