@@ -1,6 +1,7 @@
 Revision history for Perl extension Crypt::NaCl::Sodium.
 
 {{$NEXT}}
+    Statically linked libsodium.a
 
 0.04   2015-05-18 00:31:37
     BSDs do not come with mempcpy
